test/functions/return-type-class-hierarchy/shared-child1-borrowed-child2.2.good
shared-child1-borrowed-child2.chpl:7: error: unable to resolve return type
